# pystencils

./: .flake8  .gitignore  .gitlab-ci.yml  CITATION.cff  CONTRIBUTING.md  README.md  conftest.py  mypy.ini  noxfile.py  pyproject.toml  pytest.ini
docs/source/: conf.py  index.md  index.rst  installation.md
docs/source/_static/img/: IFieldBufferModel.drawio
docs/source/_templates/: version_switcher.html
docs/source/api/: codegen.md  flow.md  jit.md  types.rst
docs/source/api/symbolic/: grids.md  index.md  sympy_features.md  sympyextensions.rst
docs/source/backend/: ast.rst  backend_walkthrough.md  gpu_codegen.md  index.md  objects.md
docs/source/contributing/: index.md  testing.md
docs/source/tutorials/: index.rst
docs/source/user_manual/: WorkingWithTypes.md  cpu_optimization.md  flowgraphs.md  gpu_kernels.md  kernelcreation.md  random_numbers.md  reductions.md  sycl_kernels.md  symbolic_language.rst
maintainer/: generate_simd_horizontal_op.py  qemu_armv8_fixtures.py
src/pystencils/: __init__.py  bit_masks.py  cache.py  display_utils.py  field.py  inspection.py  kernelcreation.py  rng.py  session.py  stencil.py  timeloop.py  typing.py
src/pystencils/backend/: functions.py  literals.py  reduction_op_mapping.py
src/pystencils/backend/ast/: analysis.py  astnode.py  axes.py  expressions.py  structural.py  util.py  vector.py
src/pystencils/backend/emission/: base_printer.py  c_printer.py  ir_printer.py
src/pystencils/backend/kernelcreation/: __init__.py  analysis.py  ast_factory.py  context.py  freeze.py  freeze_flowgraph.py  iteration_space.py  typification.py
src/pystencils/backend/transformations/: __init__.py  add_pragmas.py  ast_vectorizer.py  axis_expansion.py  canonical_clone.py  canonicalize_symbols.py  eliminate_constants.py  hoist_iteration_invariant_decls.py  loop_vectorizer.py  materialize_axes.py  reductions_to_memory.py  reshape_loops.py  rewrite.py  select_functions.py  select_intrinsics.py
src/pystencils/backends/: arm_instruction_sets.py  simd_instruction_sets.py
src/pystencils/boundaries/: boundaryhandling.py
src/pystencils/codegen/: config.py  cpu_loop_strategies.py  driver.py  gpu_indexing.py  kernel.py  parameters.py  properties.py  sycl_indexing.py  target.py
src/pystencils/cpu/: cpujit.py
src/pystencils/datahandling/: serial_datahandling.py
src/pystencils/fd/: derivation.py  finitevolumes.py
src/pystencils/flow/: __init__.py  builders.py  canonicalize_flowgraph.py  flowgraph.py  operator.py  printing.py
src/pystencils/gpu/: periodicity.py
src/pystencils/grids/: __init__.py  patch.py  patch_data.py  protocols.py  pyvista.py  staggered_field.py  tensor_field.py
src/pystencils/include/: __main__.py  aesni_rand.h  arm_neon_helpers.h  gpu_defines.h  half_precision.h  myintrin.h  philox_rand.h  ppc_altivec_helpers.h  riscv_v_helpers.h
src/pystencils/include/pystencils_runtime/: cuda.cuh  generic_gpu.hpp  hip.h  neon.hpp  random.hpp  short_arrays.hpp  simd_horizontal_helpers.h  sve.hpp  x86.hpp
src/pystencils/jit/: __init__.py  cpu_extension_module.py  error.py  gpu_cupy.py  jit.py
src/pystencils/jit/cpu/: __init__.py  compiler_info.py  cpu_kernel_module.tmpl.cpp  cpujit.py  (+1 more)
src/pystencils/simp/: assignment_collection.py  simplifications.py  subexpression_insertion.py
src/pystencils/sympyextensions/: __init__.py  atom_proxy.py  bit_masks.py  fast_approximation.py  integer_functions.py  math.py  pointers.py  random.py  reduction.py  stencils.py  typed_sympy.py
src/pystencils/types/: __init__.py  meta.py  parsing.py  types.py
tests/: dpctl_compat.py  fixtures.py  test_conditional_vec.py  test_quicktests.py  test_vectorization.py  test_vectorization_specific.py
tests/codegen/: test_flowgraph_codegen.py
tests/fd/: test_fvm.py
tests/flow/: test_canonicalize_flowgraph.py  test_flowgraph.py  test_flowgraph_builders.py  test_flowgraph_codegen.py  test_operator.py  test_rewriting.py
tests/frontend/: test_address_of.py  test_bit_masks.py  test_conditional_field_access.py  test_fast_approximation.py  test_simplification_strategy.py  test_simplifications.py  test_sympyextensions.py
tests/grids/: test_patch.py  test_patch_data.py  test_staggered_field.py  test_tensor_field.py
tests/jit/: test_cpujit.py  test_sycljit.py
tests/kernelcreation/: test_blocking_staggered.py  test_buffer.py  test_buffer_gpu.py  test_domain_kernels.py  test_functions.py  test_gpu.py  test_half_precision.py  test_index_kernels.py  test_iteration_slices.py  test_kernel_decorator.py  test_logarithm.py  test_reduction.py  test_rng.py  test_struct_types.py  test_sum_prod.py  test_sycl_codegen.py  test_type_cast.py
tests/nbackend/: test_ast.py  test_cpu_axes.py  test_cpujit.py  test_extensions.py  test_gpu_axes.py  test_vectorization.py
tests/nbackend/kernelcreation/: test_analysis.py  test_context.py  test_freeze.py  test_freeze_flowgraph.py  test_iteration_space.py  test_openmp.py  test_typification.py
tests/nbackend/transformations/: test_add_pragmas.py  test_ast_vectorizer.py  test_canonical_clone.py  test_canonicalize_symbols.py  test_constant_elimination.py  test_hoist_invariants.py  test_reshape_loops.py
tests/types/: test_types.py
util/: generate_simd_horizontal_op.py
(+13 files in other folders)
